added a tradeolume function and updated changelog

--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
 # Geminipy Changelog
 
 # v0.0.3
-Added a function for the public ticker "pubticker" API endpoint
-Added functions for auction data (including history)
+Added "pubticker" function for the public ticker API endpoint
+Added "auction" and "auction_history" functions for auction data
+Added "tradevolume" function to get user trade volume
 
 # v0.0.2
 Changed project layout to make it compatible with PyPi (pip)
