change version info and changelog for v0.0.4

--- a/changelog
+++ b/changelog
@@ -1,5 +1,8 @@
 # Geminipy Changelog
 
+# v0.0.4
+Added "fees" function for the fee and notional volume API endpoint
+
 # v0.0.3
 Added "pubticker" function for the public ticker API endpoint
 Added "auction" and "auction_history" functions for auction data
