--- a/changelog
+++ b/changelog
@@ -1,5 +1,31 @@
 # Geminipy Changelog
 
+# v0.0.5
+Code update to python 3.6 or newer version.
+Code simplied and refactored
+Created new method "_requests" to unifiy all requests.
+Code comments changed.
+Method names changed for more friendly and autodoc ones.
+New class Geminipy method "get_account_details"
+New class Geminipy  method "get_earn_balance"
+New class Geminipy  method "request_approved_address"
+New class Geminipy  method "remove_approved_address"
+New class Geminipy  method "get_notional_balances"
+
+# v0.0.5
+Code update to python 3.6 or newer version.
+Code simplified and refactored
+Created new method "_requests" to unify all requests.
+Code comments changed.
+Method names changed for more friendly and autodoc ones.
+New class Geminipy method "get_account_details"
+New class Geminipy  method "get_earn_balance"
+New class Geminipy  method "request_approved_address"
+New class Geminipy  method "remove_approved_address"
+New class Geminipy  method "get_notional_balances"
+Changelog updated
+
+
 # v0.0.4
 Added "fees" function for the fee and notional volume API endpoint
 
